# goit_pycore_finproj_g9

./: .gitignore  LICENSE  README.md  address.py  address_book.py  birthday.py  boterror.py  commands.py  decorators.py  email.py  field.py  handler.py  main.py  name.py  note.py  note_book.py  phone.py  pyproject.toml  record.py  requirements.txt  session_data.pkl  session_handler.py  texts.py  utils.py
src/megabot9/: address.py  address_book.py  birthday.py  decorators.py  email.py  handler.py  main.py  name.py  note.py  note_book.py  phone.py  record.py  texts.py  utils.py
src/megabot9_GPFG9/: main.py  note.py  record.py  session_handler.py  texts.py
